[gd_scene load_steps=5 format=3 uid="uid://bfe5dwpkm1ius"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_5g3s7"]
[ext_resource type="Script" uid="uid://nysme33ujet7" path="res://src/windows/image_editor_window.gd" id="2_2gdtu"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_v7f7k"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="3_vgo61"]

[node name="ImageEditorWindow" instance=ExtResource("1_5g3s7")]
offset_right = 1076.0
offset_bottom = 801.0
theme = ExtResource("2_v7f7k")
script = ExtResource("2_2gdtu")
panel_corner_radius = 0
panel_style_override = ExtResource("3_vgo61")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="InputEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="BrowseButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Browse"

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Control" type="Control" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ProgressBarContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Control" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Control/ProgressBarContainer" index="0"]
layout_mode = 2
text = "Converting: "

[node name="ProgressBar" type="ProgressBar" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Control/ProgressBarContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="NoImageLabel" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "No Image Loaded"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Original Texture" type="TextureRect" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/TabContainer" index="1"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5
metadata/_tab_index = 0

[node name="Paletted Texture" type="TextureRect" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/TabContainer" index="2"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5
metadata/_tab_index = 1

[node name="HSeparator2" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="6"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Save RAW"

[node name="FileDialog" type="FileDialog" parent="." index="2"]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
size = Vector2i(1280, 800)
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg,*.png,*.webp,*.svg,*.bmp,*.dds,*.ktx,*.tga;Images")

[node name="SaveFileDialog" type="FileDialog" parent="." index="3"]
unique_name_in_owner = true
oversampling_override = 1.0
initial_position = 2
size = Vector2i(1280, 800)
access = 2
filters = PackedStringArray("*.RAW")

[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
